<resources>
    <string name="app_name">PhoneApp</string>
    <string name="phones">Phones</string>
    <string name="add_phone">Add phone</string>
    <string name="iphone">iPhone</string>
    <string name="samsung">Samsung</string>
    <string name="mi">Mi</string>
    <string name="sony">Sony</string>
    <string name="huawei">Huawei</string>
    <string name="artel">Artel</string>
    <string name="phone_name">Phone name</string>
    <string name="add">Add</string>
    <string name="phone_features">Phone features</string>
</resources>